--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,11 +34,12 @@ repos:
       - id: golangci-lint
         entry: bash -c 'exec golangci-lint run -v ${GOLANGCI_LINT_VERBOSE} -j=${GOLANGCI_LINT_CONCURRENCY:-1}' # custom bash so we can override concurrency for faster dev runs
 
-  - repo: git://github.com/igorshubovych/markdownlint-cli
-    rev: v0.22.0
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.24.0
     hooks:
       - id: markdownlint
         entry: markdownlint --ignore .github/*.md
+        language_version: 12.16.3
 
   - repo: git://github.com/detailyang/pre-commit-shell
     rev: 1.0.5
@@ -51,6 +52,7 @@ repos:
         name: prettier
         entry: node_modules/.bin/prettier --write
         language: node
+        language_version: 12.16.3
         files: \.(js|jsx)$
 
   - repo: local
@@ -59,6 +61,7 @@ repos:
         name: eslint
         entry: node_modules/.bin/eslint --ext .js,.jsx --max-warnings=0
         language: node
+        language_version: 12.16.3
         files: \.(js|jsx)$
         exclude: >
           (?x)^(
@@ -92,9 +95,12 @@ repos:
     hooks:
       - id: gen-docs
         args: ['docs/adr']
+        language_version: 12.16.3
       - id: circleci-validate
       - id: markdown-toc
+        language_version: 12.16.3
       - id: mdspell
+        language_version: 12.16.3
         exclude: >
           (?x)^(
             node_modules/|
@@ -106,6 +112,7 @@ repos:
     rev: v0.1.0
     hooks:
       - id: dockerfilelint
+        language_version: 12.16.3
 
   - repo: local
     hooks:
