--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,7 @@
+default_language_version:
+  # this should match the version in .node-version at the root of this project
+  node: 12.16.3
+
 repos:
   - repo: local
     hooks:
@@ -34,8 +38,8 @@ repos:
       - id: golangci-lint
         entry: bash -c 'exec golangci-lint run -v ${GOLANGCI_LINT_VERBOSE} -j=${GOLANGCI_LINT_CONCURRENCY:-1}' # custom bash so we can override concurrency for faster dev runs
 
-  - repo: git://github.com/igorshubovych/markdownlint-cli
-    rev: v0.22.0
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.24.0
     hooks:
       - id: markdownlint
         entry: markdownlint --ignore .github/*.md
