add flag to fix output not being shown in artifact

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -605,7 +605,7 @@ jobs:
             echo 'export GOLANGCI_LINT_VERBOSE=-v' >> $BASH_ENV
             source $BASH_ENV
             mkdir -p tmp/test-results/pretest
-            pre-commit run -v --all-files golangci-lint | tee tmp/test-results/pretest/golangci-lint.out
+            pre-commit run -v --all-files golangci-lint | tee -i tmp/test-results/pretest/golangci-lint.out
       - run:
           name: Run prettier checks
           command: yarn prettier-ci
