--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1319,7 +1319,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: placeholder_branch_name
+              ignore: mk-MB-4865-dockerhub-auth
 
       - integration_tests_mtls:
           requires:
@@ -1333,7 +1333,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: placeholder_branch_name
+              ignore: mk-MB-4865-dockerhub-auth
 
       - client_test:
           requires:
@@ -1341,7 +1341,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: placeholder_branch_name
+              ignore: mk-MB-4865-dockerhub-auth
 
       - server_test:
           requires:
@@ -1349,7 +1349,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: placeholder_branch_name
+              ignore: mk-MB-4865-dockerhub-auth
 
       - build_app:
           requires:
@@ -1389,21 +1389,21 @@ workflows:
             - build_app
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mk-MB-4865-dockerhub-auth
 
       - push_migrations_exp:
           requires:
             - build_migrations
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mk-MB-4865-dockerhub-auth
 
       - push_tasks_exp:
           requires:
             - build_tasks
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mk-MB-4865-dockerhub-auth
 
       - deploy_exp_migrations:
           requires:
@@ -1417,28 +1417,28 @@ workflows:
             - push_migrations_exp
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mk-MB-4865-dockerhub-auth
 
       - deploy_exp_tasks:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mk-MB-4865-dockerhub-auth
 
       - deploy_exp_app:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mk-MB-4865-dockerhub-auth
 
       - deploy_exp_app_client_tls:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: placeholder_branch_name
+              only: mk-MB-4865-dockerhub-auth
 
       - push_app_stg:
           requires:
