comment on why we are adding auth

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,10 @@ executors:
     working_directory: /root/project
     docker:
       - image: mk0x/docker-clamav:alpine
+        # Authenticate with Docker Hub to avoid rate limit problems beginning on Nov 1st, 2020.
+        # See https://www.docker.com/blog/scaling-docker-to-serve-millions-more-developers-network-egress/ for details
+        # We'll need this until CircleCI and Docker Hub work out a deal to prevent rate limiting errors from CircleCI
+        # IPs.
         auth:
           username: $DOCKERHUB_USERNAME
           password: $DOCKERHUB_PASSWORD
