added addl error handling support api

--- a/swagger/support.yaml
+++ b/swagger/support.yaml
@@ -501,6 +501,8 @@ paths:
           $ref: '#/responses/PermissionDenied'
         '404':
           $ref: '#/responses/NotFound'
+        '422':
+          $ref: '#/responses/UnprocessableEntity'
         '500':
           $ref: '#/responses/ServerError'
 definitions:
