--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1102,20 +1102,8 @@ paths:
         - queues
       parameters:
         - in: query
-          name: filter
+          name: branch
           type: string
-        - in: query
-          name: page
-          type: integer
-        - in: query
-          name: perPage
-          type: integer
-        - in: query
-          name: sort
-          type: string
-        - in: query
-          name: order
-          type: boolean
       responses:
         '200':
           description: Successfully returned all moves matching the criteria
