--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1104,6 +1104,17 @@ paths:
         - in: query
           name: branch
           type: string
+        - in: query
+          name: status
+          type: array
+          description: Filtering for the status.
+          uniqueItems: true
+          items:
+            type: string
+            enum:
+              - New move
+              - Approvals requested
+              - Move approved
       responses:
         '200':
           description: Successfully returned all moves matching the criteria
