--- a/src/scenes/.eslintrc
+++ b/src/scenes/.eslintrc
@@ -6,7 +6,7 @@
     "no-only-tests/no-only-tests": "error",
     "no-debugger": "warn",
     "jsx-a11y/anchor-is-valid": "off",
-    "react/jsx-no-target-blank": "off",
+    "react/jsx-no-target-blank": "on",
     "react/jsx-curly-brace-presence": "error"
   }
 }
