--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1323,7 +1323,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: placeholder_branch_name
+              ignore: sojeri/mb-4886/migrate-selectedMoveType-NTS-raw-value
 
       - integration_tests_mtls:
           requires:
@@ -1337,7 +1337,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: placeholder_branch_name
+              ignore: sojeri/mb-4886/migrate-selectedMoveType-NTS-raw-value
 
       - client_test:
           requires:
@@ -1345,7 +1345,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: placeholder_branch_name
+              ignore: sojeri/mb-4886/migrate-selectedMoveType-NTS-raw-value
 
       - server_test:
           requires:
@@ -1353,7 +1353,7 @@ workflows:
           # if testing on experimental, you can disable these tests by using the commented block below.
           filters:
             branches:
-              ignore: placeholder_branch_name
+              ignore: sojeri/mb-4886/migrate-selectedMoveType-NTS-raw-value
 
       - build_app:
           requires:
@@ -1393,21 +1393,21 @@ workflows:
             - build_app
           filters:
             branches:
-              only: placeholder_branch_name
+              only: sojeri/mb-4886/migrate-selectedMoveType-NTS-raw-value
 
       - push_migrations_exp:
           requires:
             - build_migrations
           filters:
             branches:
-              only: placeholder_branch_name
+              only: sojeri/mb-4886/migrate-selectedMoveType-NTS-raw-value
 
       - push_tasks_exp:
           requires:
             - build_tasks
           filters:
             branches:
-              only: placeholder_branch_name
+              only: sojeri/mb-4886/migrate-selectedMoveType-NTS-raw-value
 
       - deploy_exp_migrations:
           requires:
@@ -1421,28 +1421,28 @@ workflows:
             - push_migrations_exp
           filters:
             branches:
-              only: placeholder_branch_name
+              only: sojeri/mb-4886/migrate-selectedMoveType-NTS-raw-value
 
       - deploy_exp_tasks:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: placeholder_branch_name
+              only: sojeri/mb-4886/migrate-selectedMoveType-NTS-raw-value
 
       - deploy_exp_app:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: placeholder_branch_name
+              only: sojeri/mb-4886/migrate-selectedMoveType-NTS-raw-value
 
       - deploy_exp_app_client_tls:
           requires:
             - deploy_exp_migrations
           filters:
             branches:
-              only: placeholder_branch_name
+              only: sojeri/mb-4886/migrate-selectedMoveType-NTS-raw-value
 
       - push_app_stg:
           requires:
