MB-4842 Allow filtering by branch (#5072)
* MB-4842 Allow filtering by branch
As part of the new TOO queue page, we are adding the ability to filter by various parameters. This PR only adds the backend functionality to support these queries. Adding the actual dropdowns and text fields to the queues page will be performed separately.

--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1100,6 +1100,10 @@ paths:
       operationId: getMovesQueue
       tags:
         - queues
+      parameters:
+        - in: query
+          name: branch
+          type: string
       responses:
         '200':
           description: Successfully returned all moves matching the criteria
