add rel attribute to disallow opener and referrer in target blank links

--- a/cypress/.eslintrc
+++ b/cypress/.eslintrc
@@ -6,7 +6,7 @@
     "no-only-tests/no-only-tests": "error",
     "no-debugger": "warn",
     "jsx-a11y/anchor-is-valid": "off",
-    "react/jsx-no-target-blank": "off",
+    "react/jsx-no-target-blank": "error",
     "react/jsx-curly-brace-presence": "error"
   },
   "globals": {
