found config to ignore inline config in case any were missed in find and replace

--- a/.eslintrc
+++ b/.eslintrc
@@ -39,6 +39,7 @@
     "you-dont-need-lodash-underscore/union": "off",
     "you-dont-need-lodash-underscore/uniqueId": "off"
   },
+  "noInlineConfig": true,
   "overrides": [
     {
       "files": ["*.stories.js", "*.stories.jsx", "setupTests.js"],
