--- a/src/shared/.eslintrc
+++ b/src/shared/.eslintrc
@@ -8,5 +8,6 @@
     "jsx-a11y/anchor-is-valid": "off",
     "react/jsx-no-target-blank": "error",
     "react/jsx-curly-brace-presence": "error"
-  }
+  },
+  "noInlineConfig": true
 }
