--- a/swagger/support.yaml
+++ b/swagger/support.yaml
@@ -505,6 +505,42 @@ paths:
           $ref: '#/responses/UnprocessableEntity'
         '500':
           $ref: '#/responses/ServerError'
+  '/payment-requests/ProcessReviewedPaymentRequests':
+    parameters:
+      - in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/ProcessReviewedPaymentRequests'
+    patch:
+      summary: processReviewedPaymentRequests
+      description: |
+        Updates the status of reviewed payment requests and sends PRs to Syncada if
+        the SendToSyncada flag is set
+
+        This is a support endpoint and will not be available in production.
+      operationId: processReviewedPaymentRequests
+      tags:
+        - paymentRequest
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: Successfully updated status of reviewed payment request and sent to Syncada if that flag is set
+          schema:
+            $ref: '#/definitions/PaymentRequest'
+        '400':
+          $ref: '#/responses/InvalidRequest'
+        '401':
+          $ref: '#/responses/PermissionDenied'
+        '403':
+          $ref: '#/responses/PermissionDenied'
+        '404':
+          $ref: '#/responses/NotFound'
+        '422':
+          $ref: '#/responses/UnprocessableEntity'
+        '500':
+          $ref: '#/responses/ServerError'
 definitions:
   Address:
     type: object
@@ -1255,6 +1291,26 @@ definitions:
       - PAID
     title: Payment Request Status
     type: string
+  ProcessReviewedPaymentRequests:
+    properties:
+      paymentRequestID:
+        example: 1f2270c7-7166-40ae-981e-b200ebdf3054
+        format: uuid
+        type: string
+        readOnly: true
+      status:
+        $ref: '#/definitions/PaymentRequestStatus'
+      sendToSyncada:
+        example: true
+        type: boolean
+        x-nullable: true
+      eTag:
+        type: string
+        readOnly: true
+        description: Attribute of the payment request object that automatically changes when the request is updated. This matches the value passed in the header for `If-Match`. Required when sending PUT or PATCH requests to prevent updating stale data.
+      required:
+        - sendToSyncada
+      type: object
   ProofOfServicePackage:
     properties:
       id:
