--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1085,6 +1085,14 @@ paths:
         - queues
       parameters:
         - in: query
+          name: page
+          type: integer
+          description: requested page of results
+        - in: query
+          name: perPage
+          type: integer
+          description: number of records to include per page
+        - in: query
           name: submittedAt
           type: string
         - in: query
