Make perPage variable and adjust tests.

--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1039,6 +1039,10 @@ paths:
           type: integer
           description: requested page of results
         - in: query
+          name: perPage
+          type: integer
+          description: results per page
+        - in: query
           name: branch
           type: string
         - in: query
