update envrc devlocal bucket

--- a/.envrc
+++ b/.envrc
@@ -171,9 +171,8 @@ export TZ="UTC"
 #   export STORAGE_BACKEND=local
 #   export EMAIL_BACKEND=local
 #
-# Your AWS credentials should be setup in the transcom-ppp profile using
-# aws-vault. They will be detected and used by the app automatically.
-export AWS_S3_BUCKET_NAME="transcom-ppp-app-devlocal-us-west-2"
+# Your AWS credentials should be specified via an aws-vault profile.
+export AWS_S3_BUCKET_NAME="transcom-gov-dev-app-devlocal-us-gov-west-1"
 export AWS_S3_REGION="us-west-2"
 # Setting these regions interacts poorly when using multiple AWS accounts
 export AWS_DEFAULT_REGION="us-west-2"
