--- a/swagger/support.yaml
+++ b/swagger/support.yaml
@@ -521,13 +521,13 @@ paths:
       produces:
         - application/json
       parameters:
-        - in: header
-          name: If-Match
-          type: string
-          required: true
-          description: >
-            Optimistic locking is implemented via the `If-Match` header. If the ETag header does not match
-            the
+        # - in: header
+        #   name: If-Match
+        #   type: string
+        #   required: true
+        #   description: >
+        #     Optimistic locking is implemented via the `If-Match` header. If the ETag header does not match
+        #     the
         - in: body
           name: body
           required: true
@@ -1314,10 +1314,10 @@ definitions:
         example: true
         type: boolean
         x-nullable: true
-      eTag:
-        type: string
-        readOnly: true
-        description: Attribute of the payment request object that automatically changes when the request is updated. This matches the value passed in the header for `If-Match`. Required when sending PUT or PATCH requests to prevent updating stale data.
+      # eTag:
+      #   type: string
+      #   readOnly: true
+      #   description: Attribute of the payment request object that automatically changes when the request is updated. This matches the value passed in the header for `If-Match`. Required when sending PUT or PATCH requests to prevent updating stale data.
     required:
       - sendToSyncada
   ProofOfServicePackage:
