--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -1065,9 +1065,9 @@ paths:
           items:
             type: string
             enum:
-              - New move
-              - Approvals requested
-              - Move approved
+              - SUBMITTED
+              - APPROVALS REQUESTED
+              - APPROVED
       responses:
         '200':
           description: Successfully returned all moves matching the criteria
