--- a/swagger/admin.yaml
+++ b/swagger/admin.yaml
@@ -490,6 +490,10 @@ definitions:
         type: string
         format: uuid
         example: 'c56a4180-65aa-42ec-a945-5fd21dec0538'
+      roles:
+        type: array
+        items:
+          $ref: '#/definitions/OfficeUserRole'
   OfficeUserUpdatePayload:
     type: object
     properties:
@@ -1483,4 +1487,3 @@ paths:
           description: Not authorized to update this user
         500:
           description: Server error
-
