--- a/swagger/prime.yaml
+++ b/swagger/prime.yaml
@@ -443,6 +443,8 @@ paths:
           description: The requested resource wasn't found.
           schema:
             $ref: '#/definitions/ClientError'
+        '409':
+          $ref: '#/responses/Conflict'
         '422':
           $ref: '#/responses/UnprocessableEntity'
         '500':
