--- a/swagger/prime.yaml
+++ b/swagger/prime.yaml
@@ -1121,19 +1121,25 @@ definitions:
             description: Service code allowed for this model type.
             enum:
               - DOFSIT # Domestic Origin First Day SIT
+              - DOASIT # Domestic Origin Additional SIT
           reason:
             type: string
             example: Storage items need to be picked up
             description: Explanation of why Prime is picking up SIT item.
-          pickupPostalCode:
+          sitPostalCode:
             type: string
             format: zip
             example: "90210"
             pattern: '^(\d{5}([\-]\d{4})?)$'
+          sitEntryDate:
+            format: date
+            type: string
+            description: Entry date for the SIT
         required:
           - reServiceCode
           - reason
-          - pickupPostalCode
+          - sitPostalCode
+          - sitEntryDate
   MTOServiceItemDomesticCrating: # spectral oas2-unused-definition is OK here due to polymorphism
     description: Describes a domestic crating/uncrating service item subtype of a MTOServiceItem.
     allOf:
@@ -1174,6 +1180,7 @@ definitions:
       - MTOServiceItemDDFSIT
       - MTOServiceItemShuttle
       - MTOServiceItemDomesticCrating
+      - MTOServiceItemSITDeparture
   MTOServiceItemShuttle: # spectral oas2-unused-definition is OK here due to polymorphism
     description: Describes a shuttle service item.
     allOf:
@@ -1198,6 +1205,22 @@ definitions:
           - reason
           - reServiceCode
           - description
+  MTOServiceItemSITDeparture:
+    description: Describes a SIT service item departure, a subtype of the MTOServiceItem.
+    allOf:
+      - $ref: '#/definitions/MTOServiceItem'
+      - type: object
+        properties:
+          reServiceCode:
+            type: string
+            description: Service code allowed for this model type.
+            enum:
+              - DDDSIT # Domestic Destination SIT Delivery
+              - DOPSIT # Domestic Origin SIT Pickup
+          sitDepartureDate:
+            format: date
+            type: string
+            description: Departure date for SIT
   MTOServiceItemStatus:
     description: Describes all statuses for a MTOServiceItem.
     type: string
