--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -774,6 +774,9 @@ jobs:
       - run: make server_generate
       - run: rm -f bin/generate-test-data && make bin/generate-test-data
       - run: rm -f bin/prime-api-client && make bin/prime-api-client
+      - run:
+          name: Install Frozen YARN dependencies
+          command: yarn install --frozen-lockfile
       - e2e_tests_mtls
       - store_test_results:
           path: cypress/results
@@ -810,9 +813,9 @@ jobs:
       - restore_cache:
           keys:
             - v3-cache-yarn-v3-{{ checksum "yarn.lock" }}
-      - restore_cache:
-          keys:
-            - v2-mymove-node-modules-{{ checksum "yarn.lock" }}
+      - run:
+          name: Install Frozen YARN dependencies
+          command: yarn install --frozen-lockfile
       - run: make client_test_coverage
       - announce_failure
 
@@ -853,6 +856,9 @@ jobs:
             - v3-cache-yarn-v3-{{ checksum "yarn.lock" }}
       - run: make bin/rds-ca-2019-root.pem
       - run: make bin/rds-ca-us-gov-west-1-2017-root.pem
+      - run:
+          name: Install Frozen YARN dependencies
+          command: yarn install --frozen-lockfile
       - run: make client_build
       - run: make server_build
       - build_image:
@@ -935,6 +941,9 @@ jobs:
               echo "======"
             done
           background: true
+      - run:
+          name: Install Frozen YARN dependencies
+          command: yarn install --frozen-lockfile
       - run:
           name: Happo tests
           command: yarn happo-ci
