--- a/swagger/ghc.yaml
+++ b/swagger/ghc.yaml
@@ -2483,6 +2483,10 @@ definitions:
         type: integer
       queuePaymentRequests:
         $ref: '#/definitions/QueuePaymentRequests'
+      sort:
+        type: string
+      order:
+        type: boolean
   GBLOC:
     type: string
     enum:
